# estee

./: README.md  main.py  pyproject.toml  requirements.txt
src/: database.py  main.py
tests/: test_main_module.py
